Old/Removed 2025/Removed 2025-09-07-Old menu/Menu.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2025 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class Menu : NativeObject
    {
        static Menu()
        {
            SetEventCallback();
        }
        
        public Menu()
        {
            SetNativePointer(NativeApi.Menu_Create_());
        }
        
        public Menu(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public static string EventMenuItemId
        {
            get
            {
                return NativeApi.Menu_GetEventMenuItemId_();
            }
            
        }
        
        public System.IntPtr MenuHandle
        {
            get
            {
                CheckDisposed();
                return NativeApi.Menu_GetMenuHandle_(NativePointer);
            }
            
        }
        
        public int ItemsCount
        {
            get
            {
                CheckDisposed();
                return NativeApi.Menu_GetItemsCount_(NativePointer);
            }
            
        }
        
        public static void Show(System.IntPtr menuHandle, Control control, Alternet.Drawing.PointD position)
        {
            NativeApi.Menu_Show_(menuHandle, control.NativePointer, position);
        }
        
        public static System.IntPtr CreateMainMenu(string id)
        {
            return NativeApi.Menu_CreateMainMenu_(id);
        }
        
        public static System.IntPtr CreateContextMenu(string id)
        {
            return NativeApi.Menu_CreateContextMenu_(id);
        }
        
        public static System.IntPtr CreateMenuItem(Alternet.UI.MenuItemType itemType, string id)
        {
            return NativeApi.Menu_CreateMenuItem_(itemType, id);
        }
        
        public static void DestroyMainMenu(System.IntPtr menuHandle)
        {
            NativeApi.Menu_DestroyMainMenu_(menuHandle);
        }
        
        public static void DestroyMenuItem(System.IntPtr menuHandle)
        {
            NativeApi.Menu_DestroyMenuItem_(menuHandle);
        }
        
        public static void DestroyContextMenu(System.IntPtr menuHandle)
        {
            NativeApi.Menu_DestroyContextMenu_(menuHandle);
        }
        
        public static Alternet.UI.MenuItemType GetMenuItemType(System.IntPtr handle)
        {
            return NativeApi.Menu_GetMenuItemType_(handle);
        }
        
        public static string GetMenuId(System.IntPtr handle)
        {
            return NativeApi.Menu_GetMenuId_(handle);
        }
        
        public static void SetMenuItemBitmap(System.IntPtr handle, ImageSet? value)
        {
            NativeApi.Menu_SetMenuItemBitmap_(handle, value?.NativePointer ?? IntPtr.Zero);
        }
        
        public static void SetMenuItemEnabled(System.IntPtr handle, bool value)
        {
            NativeApi.Menu_SetMenuItemEnabled_(handle, value);
        }
        
        public static void SetMenuItemText(System.IntPtr handle, string value, string rightValue)
        {
            NativeApi.Menu_SetMenuItemText_(handle, value, rightValue);
        }
        
        public static void SetMenuItemChecked(System.IntPtr handle, bool value)
        {
            NativeApi.Menu_SetMenuItemChecked_(handle, value);
        }
        
        public static void SetMenuItemSubMenu(System.IntPtr handle, System.IntPtr subMenuHandle)
        {
            NativeApi.Menu_SetMenuItemSubMenu_(handle, subMenuHandle);
        }
        
        public static void MenuAddItem(System.IntPtr handle, System.IntPtr itemHandle)
        {
            NativeApi.Menu_MenuAddItem_(handle, itemHandle);
        }
        
        public static void MenuRemoveItem(System.IntPtr handle, System.IntPtr itemHandle)
        {
            NativeApi.Menu_MenuRemoveItem_(handle, itemHandle);
        }
        
        public void InsertItemAt(int index, MenuItem item)
        {
            CheckDisposed();
            NativeApi.Menu_InsertItemAt_(NativePointer, index, item.NativePointer);
        }
        
        public void RemoveItemAt(int index)
        {
            CheckDisposed();
            NativeApi.Menu_RemoveItemAt_(NativePointer, index);
        }
        
        public void ShowContextMenu(Control control, Alternet.Drawing.PointD position)
        {
            CheckDisposed();
            NativeApi.Menu_ShowContextMenu_(NativePointer, control.NativePointer, position);
        }
        
        static GCHandle eventCallbackGCHandle;
        public static Menu? GlobalObject;
        
        static void SetEventCallback()
        {
            if (!eventCallbackGCHandle.IsAllocated)
            {
                var sink = new NativeApi.MenuEventCallbackType((obj, e, parameter) =>
                    UI.Application.HandleThreadExceptions(() =>
                    {
                        var w = NativeObject.GetFromNativePointer<Menu>(obj, p => new Menu(p));
                        w ??= GlobalObject;
                        if (w == null) return IntPtr.Zero;
                        return w.OnEvent(e, parameter);
                    }
                    )
                );
                eventCallbackGCHandle = GCHandle.Alloc(sink);
                NativeApi.Menu_SetEventCallback_(sink);
            }
        }
        
        IntPtr OnEvent(NativeApi.MenuEvent e, IntPtr parameter)
        {
            switch (e)
            {
                case NativeApi.MenuEvent.MenuClick:
                {
                    MenuClick?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.MenuEvent.MenuHighlight:
                {
                    MenuHighlight?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.MenuEvent.MenuOpened:
                {
                    MenuOpened?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.MenuEvent.MenuClosed:
                {
                    MenuClosed?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.MenuEvent.Opened:
                {
                    Opened?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.MenuEvent.Closed:
                {
                    Closed?.Invoke(); return IntPtr.Zero;
                }
                default: throw new Exception("Unexpected MenuEvent value: " + e);
            }
        }
        
        public Action? MenuClick;
        public Action? MenuHighlight;
        public Action? MenuOpened;
        public Action? MenuClosed;
        public Action? Opened;
        public Action? Closed;
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr MenuEventCallbackType(IntPtr obj, MenuEvent e, IntPtr param);
            
            public enum MenuEvent
            {
                MenuClick,
                MenuHighlight,
                MenuOpened,
                MenuClosed,
                Opened,
                Closed,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_SetEventCallback_(MenuEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Menu_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Menu_GetEventMenuItemId_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Menu_GetMenuHandle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Menu_GetItemsCount_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_Show_(System.IntPtr menuHandle, IntPtr control, Alternet.Drawing.PointD position);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Menu_CreateMainMenu_(string id);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Menu_CreateContextMenu_(string id);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Menu_CreateMenuItem_(Alternet.UI.MenuItemType itemType, string id);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_DestroyMainMenu_(System.IntPtr menuHandle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_DestroyMenuItem_(System.IntPtr menuHandle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_DestroyContextMenu_(System.IntPtr menuHandle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.MenuItemType Menu_GetMenuItemType_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Menu_GetMenuId_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_SetMenuItemBitmap_(System.IntPtr handle, IntPtr value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_SetMenuItemEnabled_(System.IntPtr handle, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_SetMenuItemText_(System.IntPtr handle, string value, string rightValue);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_SetMenuItemChecked_(System.IntPtr handle, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_SetMenuItemSubMenu_(System.IntPtr handle, System.IntPtr subMenuHandle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_MenuAddItem_(System.IntPtr handle, System.IntPtr itemHandle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_MenuRemoveItem_(System.IntPtr handle, System.IntPtr itemHandle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_InsertItemAt_(IntPtr obj, int index, IntPtr item);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_RemoveItemAt_(IntPtr obj, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Menu_ShowContextMenu_(IntPtr obj, IntPtr control, Alternet.Drawing.PointD position);
            
        }
    }
}
